[gd_scene load_steps=8 format=2]

[ext_resource path="res://LevelBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/Level_3.gd" type="Script" id=3]
[ext_resource path="res://PressurePlate.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/Small_Font.tres" type="DynamicFont" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Base" parent="." instance=ExtResource( 1 )]

[node name="Platform" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, 496 )
scale = Vector2( 0.3, 1 )

[node name="Platform4" parent="." instance=ExtResource( 2 )]
position = Vector2( 48, 368 )
scale = Vector2( 0.3, 1 )

[node name="MovingWall" parent="." instance=ExtResource( 2 )]
position = Vector2( 464, 368 )
rotation = 1.5708
scale = Vector2( 0.6, 1 )

[node name="Platform2" parent="." instance=ExtResource( 2 )]
position = Vector2( 624, 440 )
scale = Vector2( 3, 1 )

[node name="Platform3" parent="." instance=ExtResource( 2 )]
position = Vector2( 624, 296 )
scale = Vector2( 3, 1 )

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup"]
margin_left = 160.0
margin_top = 128.0
margin_right = 877.0
margin_bottom = 193.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Wow! Incredible!"

[node name="Button" type="Button" parent="Popup"]
margin_left = 256.0
margin_top = 320.0
margin_right = 800.0
margin_bottom = 512.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="PressurePlate" parent="." instance=ExtResource( 4 )]
position = Vector2( 632, 584 )

[node name="Button" parent="." instance=ExtResource( 6 )]
position = Vector2( 1008, 552 )

[node name="Button2" parent="." instance=ExtResource( 6 )]
position = Vector2( 1008, 400 )

[node name="Button3" parent="." instance=ExtResource( 6 )]
position = Vector2( 1008, 256 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 128, 584 )
[connection signal="pressed" from="Popup/Button" to="." method="_on_Button_pressed"]
